--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mysql://umll0h9ktdshkogp:DaB34p04IOVfcpXmf62H@b0ukknippuaugqbt8yhm-mysql.services.clever-cloud.com:3306/b0ukknippuaugqbt8yhm"
