--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://umll0h9ktdshkogp:DaB34p04IOVfcpXmf62H@b0ukknippuaugqbt8yhm-mysql.services.clever-cloud.com:3306/b0ukknippuaugqbt8yhm"
+
+NEXT_PUBLIC_API="/api"
